<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trading Post</string>
    <string name="title_activity_view_post">View Post</string>
    <string name="title_activity_create_post">New Post</string>
    <string name="title_activity_edit_post">Edit Post</string>
    <string name="title_activity_manage_posts">Manage Posts</string>
    <string name="title_activity_search_criteria">Search</string>
    <string name="title_category">Category</string>
    <string name="title_description">Description</string>
    <string name="title_location">Location</string>
    <string name="title_title">Title</string>
    <string name="title_date">Date</string>
    <string name="price">Price</string>
    <string name="min">Min Price</string>
    <string name="max">Max Price</string>
    <string name="city">Near City</string>
    <string name="keyword">Keyword</string>
    <string name="title_activity_multi_photo_select">Select Photos</string>
    <string name="hello_world">Hello world!</string>
    <color name="color_background">#F0F8FF</color>
	<color name ="color_text">#000099</color>
	<color name="color_price">#fafafa</color>
	<color name="color_pricebackground">#CC404040</color>
	<color name="transparent">#00F0F8FF</color>
	<string name="sms_phone">14082035769</string>
    <string name="title_activity_search_and_manage">Yard Sale</string>
    <string name="title_activity_wish_list">My Wish List</string>
    <string name="title_activity_notificationacrivity">Notificationacrivity</string>
    <string name="title_activity_notification">NotificationActivity</string>

</resources>
