<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" 
    android:background="@color/color_background" >

    <EditText
        android:id="@+id/etKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="18sp"
        android:layout_toLeftOf="@+id/ivSearch"
        android:ems="10"
        android:hint="@string/keyword"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etKeyword"
        android:layout_alignRight="@+id/etKeyword"
        android:layout_below="@+id/etKeyword"
        android:layout_marginTop="18sp"
        android:hint="@string/title_category"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etMinPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spCategory"
        android:layout_below="@+id/spCategory"
        android:ems="6"
        android:hint="@string/min"
        android:layout_marginTop="18sp"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etMinPrice"
        android:layout_below="@+id/etMinPrice"
        android:layout_toLeftOf="@+id/ivSearch"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etMaxPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etCity"
        android:layout_alignRight="@+id/etKeyword"
        android:ems="6"
        android:hint="@string/max"
        android:layout_marginTop="18sp"
        android:inputType="number" 
        android:textAppearance="?android:attr/textAppearanceSmall">

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spCategory"
        android:layout_alignParentRight="true"
        android:onClick="searchPosts"
        android:src="@drawable/ic_action_search_dark" />

</RelativeLayout>